# openmm-phyneo-plugin

./: .gitignore  CMakeLists.txt  DEV_MPID_ALIGNMENT.md  README.md  install.sh  requirements.txt
DMFF/dmff/admp/: pme.py
docs/dev/: DEV_MPID_ALIGNMENT.md  DISPERSION_PME_CUDA_ANALYSIS.md  DISPERSION_PME_QUICK_REFERENCE.md
docs/plans/: gaussian_damping_plan.md  mpid_water_analysis.md
docs/source/: building.md  dispersion_pme_cuda_dev.md
docs/superpowers/plans/: .2026-04-08-phyneo-rename.md.swp  2026-04-08-phyneo-rename.md
examples/: butane_test.py
examples/ec_bulk/: ec_bulk_md.py  ec_bulk_mscale_test.py  ec_energy_test.py  ec_energy_test_cuda.py  ec_single_test.py  pack_ec.inp
examples/ec_density/: ec_forcefield.xml  prepare_pdb.py  run_ec.py
examples/ethanol_mpid_npt/: make_box.py  residues.xml  run_cuda_npt.py
examples/parameters/: phyneo_residues.xml  phyneo_swm6.xml  swm4.xml  swm6.xml
examples/slater_custom_nonbonded/: run_slater_terms.py
examples/water_dimer_elecpol_verify/: run_verify_disp.py  run_verify_elecpol.py  run_verify_sr.py
examples/water_mpid_npt/: README.md  compare_cmd_h2o_reference.py  ff.backend_amoeba_total1000_classical_intra.xml  mpid_only.xml  out_02molL_init.out  run_cuda_npt.py  run_water_mpid_npt.py
examples/waterbox/: mpidwater_lmax2.xml  mpidwater_lmax2_test14.xml  restart.xml  run.py  test_mscale_density.py
openmmapi/include/: OpenMMPhyNEO.h
openmmapi/include/openmm/: PhyNEOForce.h  phyneoKernels.h  windowsExportPhyNEO.h
openmmapi/include/openmm/internal/: PhyNEOForceImpl.h
openmmapi/src/: PhyNEOForce.cpp  PhyNEOForceImpl.cpp
python/: CMakeLists.txt  dispersion_pme_bridge.py  dmff_sr_custom_forces.py  mpidplugin.i  phyneoplugin.i  setup.py
serialization/include/openmm/serialization/: PhyNEOForceProxy.h
serialization/src/: PhyNEOForceProxy.cpp  PhyNEOSerializationProxyRegistration.cpp
serialization/tests/: CMakeLists.txt  TestSerializePhyNEOForce.cpp
